--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -656,20 +656,16 @@ video {
   height: 2rem;
 }
 
+.h-\[100vw\]{
+  height: 100vw;
+}
+
 .h-full{
   height: 100%;
 }
 
 .h-px{
   height: 1px;
-}
-
-.h-\[\]{
-  height: ;
-}
-
-.h-\[100vw\]{
-  height: 100vw;
 }
 
 .w-auto{
@@ -682,20 +678,6 @@ video {
 
 .w-screen{
   width: 100vw;
-}
-
-.-translate-x-1\/2{
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-1\/2{
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.transform{
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .items-center{
@@ -804,39 +786,19 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-@media (min-width: 768px){
-  .md\:relative{
-    position: relative;
-  }
+.hover\:bg-sl-darkblue:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(18 90 112 / var(--tw-bg-opacity));
+}
 
+@media (min-width: 768px){
   .md\:inset-0{
     inset: 0px;
-  }
-
-  .md\:left-auto{
-    left: auto;
-  }
-
-  .md\:top-auto{
-    top: auto;
-  }
-
-  .md\:top-1\/2{
-    top: 50%;
-  }
-
-  .md\:left-1\/2{
-    left: 50%;
   }
 
   .md\:mx-auto{
     margin-left: auto;
     margin-right: auto;
-  }
-
-  .md\:my-auto{
-    margin-top: auto;
-    margin-bottom: auto;
   }
 
   .md\:flex{
@@ -857,28 +819,6 @@ video {
 
   .md\:w-1\/2{
     width: 50%;
-  }
-
-  .md\:w-80{
-    width: 20rem;
-  }
-
-  .md\:w-full{
-    width: 100%;
-  }
-
-  .md\:-translate-y-1\/2{
-    --tw-translate-y: -50%;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .md\:-translate-x-1\/2{
-    --tw-translate-x: -50%;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .md\:transform{
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .md\:items-center{
