Fixed background coloring

--- a/_layouts/linktree.html
+++ b/_layouts/linktree.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<main class="bg-sl-bgcolor text-sl-black text-center">
+<main class="text-sl-black text-center">
     <!-- Cover Hero Section -->
     <section>
 
